# react-agent-pattern

./: .env.example  .gitignore  .vpeetla-skills.json  README.md  agent-pattern-production-testing-analysis.md  pyproject.toml  vercel.json
demo/: index.html  styles.css
docs/: ARCHITECTURE.md  LOCAL_DEVELOPMENT.md
src/react_agent_pattern/: __init__.py  __main__.py  agent.py  models.py  tools.py  tracing.py
tests/: test_react_agent.py
